crates/lang/macro/tests/ui/trait_def/fail/message_selector_invalid_1.stderr
error: expecteded 4-digit hexcode for `selector` argument, e.g. #[ink(selector = 0xC0FEBABE]
 --> $DIR/message_selector_invalid_1.rs:5:20
  |
5 |     #[ink(message, selector = true)]
  |                    ^^^^^^^^^^^^^^^
